--- a/wp-content/themes/WPGulpTheme/assets/css/partials/_base.scss
+++ b/wp-content/themes/WPGulpTheme/assets/css/partials/_base.scss
@@ -22,7 +22,9 @@
 
 	h1,
 	p{
-		font-family: Lato;
+		font-family: "brandon-grotesque",sans-serif;
+		font-style: normal;
+		font-weight: 500;
 		font-weight: 100;
 	}
 
